added navigation bar and welcome section

--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body>
-    <h1>Hello world!</h1>
+  <body style="background-color: black;">
+    <header id="header">
+
+      <nav id="navbar" style="background-color:tomato;width: 100%;" >
+          <ul>
+              <li><a style="color: whitesmoke;" class="nav-link" href="">About</a></li>
+              <li><a style="color: whitesmoke;" class="nav-link" href="">Work</a></li>
+              <li><a style="color: whitesmoke;" class="nav-link" href="">Contact</a></li>
+          </ul>
+      </nav>
+    </header>
+
+
+
+    <div id="welcome-section" style="height: 500px; width: 100%; background-color: rgba(41, 38, 34, 0.993);">
+      <h1 style="color: white;text-align: center; padding-top: 50px;">Hey it's Md and Mahmoud's portfolio</h1>
+      <h2 style="color: tomato;text-align: center;padding-top: 20px;">Web Developer</h2>
+    </div>
+
 
 
 
