--- a/index.html
+++ b/index.html
@@ -25,16 +25,77 @@
       <h2 style="color: tomato;text-align: center;padding-top: 20px;">Web Developer</h2>
     </div>
 
+    <div id="">
 
+      <h1>These are some of my projects</h1>
+      <hr>
 
+      <div id="projects">
 
+        <a>
+          <figure>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
+            <figcaption>Tribute Page</figcaption>
+          </figure>
+        </a>
 
+        <a>
+          <figure>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png">
+            <figcaption>Random Quote Machine</figcaption>
+          </figure>
+        </a>
 
+        <a>
+          <figure>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png">
+            <figcaption>JavaScript Calculator</figcaption>
+          </figure>
+        </a>
 
+        <a>
+          <figure>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg">
+            <figcaption>Map Data Across The Globe</figcaption>
+          </figure>
+        </a>
 
+        <a>
+          <figure>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png">
+            <figcaption>Wikipedia Viewer</figcaption>
+          </figure>
+        </a>
 
+        <a>
+          <figure>
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png">
+            <figcaption>Tic Tac Toe Game</figcaption>
+          </figure>
+        </a>
 
+      </div>
 
+      <button>Show All</button>
+
+    </div>
+
+    <div>
+      <h1>Let's work together...</h1>
+      <p>How do you take your coffee?</p>
+      <ul>
+        <li><a>Facebook</a></li>
+        <li><a>GitHub</a></li>
+        <li><a>Twitter</a></li>
+        <li><a>Send a mail</a></li>
+        <li><a>Call me</a></li>
+      </ul>
+    </div>
+
+    <footer>
+      <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
+      <p>© Created for freeCodeCamp </p>
+    </footer>
 
 
 
