fixed nav and footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body style="background-color: black;">
+  <body style="background-color: #45567d;">
     <header id="header">
 
       <nav id="navbar" style="background-color:tomato;width: 100%;" >
@@ -80,10 +80,10 @@
 
     </div>
 
-    <div>
+    <div id="social-link" style="color: whitesmoke; text-align: center;width: 100%;">
       <h1>Let's work together...</h1>
       <p>How do you take your coffee?</p>
-      <ul>
+      <ul style="display: flex; list-style-type: none; vertical-align: middle;padding-left: 30%;">
         <li><a>Facebook</a></li>
         <li><a>GitHub</a></li>
         <li><a>Twitter</a></li>
@@ -92,7 +92,7 @@
       </ul>
     </div>
 
-    <footer>
+    <footer style="color: whitesmoke; text-align: center;width: 100%;" >
       <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
       <p>© Created for freeCodeCamp </p>
     </footer>
