--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav id="navbar" style="background-color:tomato;width: 100%;" >
           <ul>
               <li><a style="color: whitesmoke;" class="nav-link" href="">About</a></li>
-              <li><a style="color: whitesmoke;" class="nav-link" href="">Work</a></li>
+              <li><a style="color: whitesmoke;" class="nav-link" href="#projects">Work</a></li>
               <li><a style="color: whitesmoke;" class="nav-link" href="">Contact</a></li>
           </ul>
       </nav>
@@ -35,7 +35,7 @@
         <a>
           <figure>
             <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg">
-            <figcaption>Tribute Page</figcaption>
+            <figcaption class="project-tile">Tribute Page</figcaption>
           </figure>
         </a>
 
@@ -85,7 +85,7 @@
       <p>How do you take your coffee?</p>
       <ul style="display: flex; list-style-type: none; vertical-align: middle;padding-left: 30%;">
         <li><a>Facebook</a></li>
-        <li><a>GitHub</a></li>
+        <li><a id="profile-link" target="_blank">GitHub</a></li>
         <li><a>Twitter</a></li>
         <li><a>Send a mail</a></li>
         <li><a>Call me</a></li>
